# MCP-Server

./: main.py  pyproject.toml
backend/: .gitignore  database.db  database.py  main.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
